fixed unit test